<resources>
    <string name="app_name">coin</string>
    <string name="login">log in</string>
    <string name="signup">sign up</string>
    <string name="coin">Money Lover</string>
    <string name="title">Simplest way to manage personal finances.Because money matters.</string>
    <string name="password">password</string>
    <string name="password_cf">password confirm</string>
    <string name="email_address">email address</string>
    <string name="email">email</string>
    <string name="forgot_passwd">forgot password</string>
    <string name="welcome">welcome</string>
    <string name="welcome_back">welcome back.</string>
    <string name="email_err_fm">wrong email format</string>
    <string name="password_err_fm">wrong password format</string>
    <string name="password_cf_err">the two passwords are not the same</string>
    <string name="change_avatar">change avatar</string>
    <string name="wallet_name">wallet name</string>
    <string name="currency_unit">currency unit</string>
    <string name="Continue">Continue</string>
    <string name="first_create_wallet">First, let create a wallet</string>
    <string name="vietnam_dong">Việt Nam Đồng</string>
    <string name="vnd">₫</string>
    <string name="united_states_dollar">United States Dollar</string>
    <string name="us_doller">$</string>
    <string name="England_pound">Pound</string>
    <string name="pound">£</string>
    <string name="eu">Euro</string>
    <string name="euro">€</string>
    <string name="china">Yuan Renminbi</string>
    <string name="china_cur">¥</string>
    <string name="japan">Yen</string>
    <string name="japan_cur">¥</string>
    <string name="korea">Yen</string>
    <string name="korea_cur">¥</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about_time">About time</string>
    <string name="group_view">Group view</string>
    <string name="transfer">Transfer money to another wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_tran_sac">Add transaction</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="khoan_thu">Revenue</string>
    <string name="khoan_chi">Expenses</string>
    <string name="plan_buget">Budget</string>
    <string name="plan_buget_des">A financial plan helps you balance your income and expenses.</string>
    <string name="add_budget">Add Budget Plan</string>
    <string name="time_app">Time Of Application</string>
    <string name="title_activity_add_budget_plan">AddBudgetPlan</string>
</resources>