<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/gradient_bg"
    tools:context=".Controller.LoginForm">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:fontFamily="@font/duru_sans"
           android:gravity="center"
           android:text="@string/coin"
           android:textColor="@color/black"
           android:textSize="50dp"
           android:textStyle="bold" />

       <com.airbnb.lottie.LottieAnimationView
           android:id="@+id/animation_view"
           android:layout_width="300dp"
           android:layout_height="300dp"
           android:layout_gravity="center"
           android:layout_marginBottom="10dp"
           app:lottie_autoPlay="true"
           app:lottie_loop="true"
           app:lottie_rawRes="@raw/money"
           app:lottie_speed="0.8" />

       <android.widget.Button
           android:id="@+id/login_f_btn"
           android:layout_width="220dp"
           android:layout_height="wrap_content"
           android:textSize="15dp"
           android:letterSpacing="0.12"
           android:layout_gravity="center"
           android:fontFamily="@font/duru_sans"
           android:textStyle="bold"
           android:background="@drawable/button_radius"
           android:text="@string/login"/>
       <android.widget.Button
           android:id="@+id/signup_f_btn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:background="@android:color/transparent"
           android:textAllCaps="false"
           android:textStyle="bold"
           android:fontFamily="@font/duru_sans"
           android:letterSpacing="0.12"
           android:textSize="15dp"
           android:layout_gravity="center"
           android:text="@string/signup"/>
   </LinearLayout>
</LinearLayout>