<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    tools:context=".Controller.Login">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_create_wallet"
                android:gravity="center"
                android:fontFamily="@font/duru_sans"
                android:textSize="40dp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/img_wallet_first_add"
                android:src="@drawable/wallet_icon_7"
                android:padding="5dp"
                android:background="@drawable/circle_img"/>
            <android.widget.Button
                android:id="@+id/btn_change_avatar_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15dp"
                android:fontFamily="@font/duru_sans"
                android:letterSpacing="0.12"
                android:layout_gravity="center"
                android:text="@string/change_avatar"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_wallet_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/duru_sans"
                    android:text="@string/wallet_name"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:id="@+id/edt_wallet_name_first"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:textColorHint="@color/border"
                    android:textStyle="bold"
                    android:fontFamily="@font/duru_sans"
                    android:paddingLeft="20dp"
                    android:textSize="18dp"
                    android:background="@drawable/input_border"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_currency_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/duru_sans"
                    android:text="@string/currency_unit"
                    android:layout_marginBottom="10dp"
                    />

                <Spinner
                    android:id="@+id/sp_currency"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_border"
                    android:fontFamily="@font/duru_sans"
                    android:spinnerMode="dialog"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:drawSelectorOnTop="true"
                    android:padding="10dp"
                     />
            </LinearLayout>
            <android.widget.Button
                android:id="@+id/btn_continue_first"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:letterSpacing="0.12"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/duru_sans"
                android:textStyle="bold"
                android:background="@drawable/button_radius"
                android:text="@string/Continue"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
