<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/backgr"
    tools:context=".Activity.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgr">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/welcome_s_view"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:layout_gravity="left"
                android:fontFamily="@font/duru_sans"
                android:textSize="40dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/email_s_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/duru_sans"
                    android:text="@string/email_address"
                    android:layout_marginBottom="10dp"/>
                <EditText
                    android:id="@+id/email_s_edt"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:textColorHint="@color/border"
                    android:textStyle="bold"
                    android:fontFamily="@font/duru_sans"
                    android:paddingLeft="20dp"
                    android:textSize="18dp"
                    android:background="@drawable/input_border"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/passwd_s_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/duru_sans"
                    android:text="@string/password"
                    android:layout_marginBottom="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwd_s_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:hintEnabled="false"
                    app:boxStrokeWidthFocused="0dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwd_s_edt"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:background="@drawable/input_border"
                        android:fontFamily="@font/duru_sans"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/passwd_cf_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/duru_sans"
                    android:text="@string/password_cf"
                    android:layout_marginBottom="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/passwd_cf_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:hintEnabled="false"
                    app:boxStrokeWidthFocused="0dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwd_cf_edt"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:textStyle="bold"
                        android:fontFamily="@font/duru_sans"
                        android:paddingLeft="20dp"
                        android:textSize="18dp"
                        android:background="@drawable/input_border"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <android.widget.Button
                android:id="@+id/signup_s_btn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:letterSpacing="0.12"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/duru_sans"
                android:textStyle="bold"
                android:background="@drawable/button_radius"
                android:text="@string/signup"/>
            <android.widget.Button
                android:id="@+id/login_s_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15dp"
                android:fontFamily="@font/duru_sans"
                android:letterSpacing="0.12"
                android:layout_gravity="center"
                android:text="@string/login"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:gravity="right|bottom">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hand"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
