<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context=".Fragment.AddBudgetPlan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vnd"
                android:textColor="@color/circleColer"
                android:textSize="35dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_money_add_bud"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:focusable="true"
                android:text=""
                android:inputType="numberDecimal" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rdg_type_add_bud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_thu_add_bud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/khoan_thu"
                android:checked="true"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/rd_chi_add_bud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/khoan_chi"
                android:textSize="20dp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_select_gr_add_bud"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_not_selected" />

            <EditText
                android:id="@+id/edt_select_gr_add_bud"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:editable="false"
                android:focusable="false"
                android:text=""
                android:hint="SELECT GROUP" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icons_note" />

            <EditText
                android:id="@+id/edt_note_add_bud"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:hint="NOTE" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon_calendar" />

            <EditText
                android:id="@+id/edt_day_add_bud"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:editable="false"
                android:focusable="false"
                android:text=""
                android:hint="Apply time" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>